--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -18,6 +18,7 @@ header{
         display: flex;
         justify-content: space-around;
         gap:3rem;
+        align-items: center;
     
         li a{
             color:white;
@@ -25,6 +26,15 @@ header{
         }
         li a:hover {
             color: var(--accent-color);
+        }
+    }
+    .text-container{
+        display: flex;
+        align-items: center; 
+        justify-content: flex-end; 
+
+        h2{
+            color:white;
         }
     }
   }
@@ -36,5 +46,5 @@ header{
 .nav-content{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    gap:10rem;
 }
