--- a/src/routes/WelcomePage/WelcomePage.module.css
+++ b/src/routes/WelcomePage/WelcomePage.module.css
@@ -97,7 +97,8 @@
   @keyframes float {
     0%,
     100% {
-      transform: translateY(0);
+      transform: translateY(0
+      );
     }
     50% {
       transform: translateY(-10px);
