--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,4 @@
 .footer {
-
     color: white;
     padding: 2rem;
     text-align: center;
@@ -19,31 +18,19 @@
     padding: 0;
     display: flex;
     gap: 2rem;
+
+    li a {
+      color: white;
+      text-decoration: none;
+    }
+
+    li a:hover {
+      color: var(--accent-color);
+    }
   }
   
-  .footer-links li a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .footer-links li a:hover {
-    color: var(--accent-color);
-  }
-  
-  .social-media a {
-    margin: 0 10px;
-    color: white;
-    font-size: 1.5rem;
-  }
-  
-  .social-media a:hover {
-    color: var(--accent-color);
-  }
-  
-  .footer-text p {
-    font-size: 0.9rem;
-  }
-  
+
+.social-media{
   .social-icon {
     width: 20px;  
     height: 20px; 
@@ -51,13 +38,25 @@
     filter: invert(100%);
     transition: transform 0.3s ease;
   }
-  
   .social-icon:hover {
     transform: scale(1.1);
   }
 
-
-  /* Responsive Design */
+  a {
+    margin: 0 10px;
+    color: white;
+    font-size: 1.5rem;
+  }
+  a:hover {
+    color: var(--accent-color);
+  }
+}
+  
+  .footer-text p {
+    font-size: 0.9rem;
+  }
+  
+ 
   @media screen and (max-width: 600px) {
     .footer-content {
       gap: 1rem;
