--- a/src/routes/Detail/Detail.module.css
+++ b/src/routes/Detail/Detail.module.css
@@ -14,6 +14,7 @@
     margin-bottom: 15px;
     width: 100%;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+
   }
   
   .addToWatchlistBtn {
@@ -30,4 +31,11 @@
   .addToWatchlistBtn:hover {
     background-color: #f75c02;
 
+  }
+
+  .detailImageWrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
