--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,5 @@
 
 header{
-
     box-shadow: 0 2px 5px rgba(111, 108, 108, 0.1); 
     display: flex;
     flex-direction: column;
@@ -46,5 +45,6 @@ header{
 .nav-content{
     display: flex;
     flex-direction: row;
-    gap:10rem;
+    gap:20rem;
+    width: 1200px;
 }
