--- a/src/routes/MainPage/MainPage.css
+++ b/src/routes/MainPage/MainPage.css
@@ -10,73 +10,21 @@
     display: flex;
     align-items: center;
     justify-content: center; 
+    margin:0;
 
-    button{
-        background-color: var(--accent-color);
-        color:white;
-        padding:2rem;
+    .openModalBtn{
+        background-color:var(--secondary-color);
+        padding:1.5rem;
         font-size: 1.5rem;
-        border-radius:8px;
+        border-radius:30px;
         border:none;
         cursor: pointer;
+        border:2px solid rgba(255, 255, 255, 0.722);
+        font-weight: bold;
     }
-    button:hover {
-      background-color: darken(#FF6B00, 10%);
+    .openModalBtn:hover {
       transform: translateY(-2px);
       box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+    }
   }
 
-  }
-  
-  .coin-table {
-    max-width: 800px;
-    border-collapse: collapse;
-    margin-top: 20px;
-    background-color: white;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-    border-radius: 8px;
-    overflow: hidden;
-
-    th,td {
-        padding: 12px 15px;
-        text-align: left;
-      }
-
-    tr {
-        text-align: center;
-        cursor: pointer;
-    }
-    thead {
-        background-color: var(--secondary-color);
-        color: white;
-    }
-    th {
-        font-weight: bold;
-        text-transform: uppercase;
-        font-size: 0.85em;
-        letter-spacing: 0.1em;
-    }
-    tbody tr:nth-child(even) {
-        background-color: #f8f8f8;
-    }
-    tbody tr:hover {
-        background-color: #f1f1f1;
-        transition: background-color 0.3s ease;
-    }
-  
-  }
-  
-.main-page-text{
-  padding:4rem;
-}
-  
-  @media screen and (max-width: 600px) {
-    .coin-table {
-      font-size: 0.8em;
-    }
-    
-    .coin-table th,
-    .coin-table td {
-      padding: 8px 10px;
-    }
-  }
