--- a/src/routes/Aboutus/Aboutus.css
+++ b/src/routes/Aboutus/Aboutus.css
@@ -1,11 +1,11 @@
-:root {
+/* :root {
     --primary-color: #2c3e50;
     --secondary-color: #3498db;
     --accent-color: #e74c3c;
     --bg-color: #f9f9f9;
     --text-color: #333;
     --gradient: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-  }
+  } */
   
   body {
     background-color: var(--bg-color);
