--- a/src/routes/MainPage/MainPage.css
+++ b/src/routes/MainPage/MainPage.css
@@ -13,7 +13,7 @@
     margin:0;
 
     .openModalBtn{
-        background-color:var(--secondary-color);
+        background-color:#ADD8E6;
         padding:1.5rem;
         font-size: 1.5rem;
         border-radius:30px;
