--- a/src/routes/Detail/Detail.module.css
+++ b/src/routes/Detail/Detail.module.css
@@ -6,6 +6,7 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    color:white;
   }
   
   .infoSection {
@@ -38,4 +39,5 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 2rem;
   }
