--- a/src/routes/Cryptocurrencies/Cryptocurrencies.css
+++ b/src/routes/Cryptocurrencies/Cryptocurrencies.css
@@ -1,3 +1,13 @@
+.searchbar-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 1rem;
+}
+
+
+
+
 .coin-table {
     max-width: 1200px;
     border-collapse: collapse;
