--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,7 @@
 .footer {
     color: white;
-    padding: 2rem;
     text-align: center;
-    margin-top:3rem;
+    padding-top:4rem;
     border-top: 1px solid rgba(111, 108, 108, 0.1); 
   }
   
