--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -11,22 +11,27 @@
   .modal {
     z-index: 1001;
     border-radius: 8px;
+    height: 18rem;
     text-align: center;
-    padding: 3rem;
-    background-color: var(--secondary-color);
+    padding:2rem;
+    background: linear-gradient(135deg, 
+    #0a1c44 0%, 
+    #1c3a6e 50%, 
+    #0f2555 100%
+  );
     border : none;
+    color: white;
   }
 
   .close-button {
     position: absolute;
-
     top: 10px;
     right: 10px;
     background-color: transparent;
     border: none;
     font-size: 18px;
     cursor: pointer;
-    color: #333;
+    color: white;
 
     transition: background-color 0.3s ease;
   }
