changed css in faq

--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -72,6 +72,10 @@
     }
 }
 
+.faq-answer{
+    text-align: left;
+}
+
 @media (max-width: 768px) {
     .faq-container {
         flex-direction: column;
