--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,30 +1,55 @@
-.input-wrapper{
-    max-width: 720px;
-    width: 100%;
-    height: 2.5rem;
-    border: none;
-    border-radius: 8px;
-    padding: 0 15px;
-    box-shadow: 0px 0px 8px #ddd;
-    background-color: white;
-    display: flex;
-    align-items: center;
+.input-wrapper {
+  max-width: 720px;
+  width: 100%;
+  height: 2.5rem;
+  border: none;
+  border-radius: 8px;
+  padding: 0 15px;
+  background-color: white;
+  display: flex;
+  align-items: center;
 }
 
 input {
-    background-color: transparent;
-    border: none;
-    height: 100%;
-    font-size: 1.25rem;
-    width: 100%;
-    margin-left: 5px;
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  font-size: 1.2rem;
+  width: 100%;
+  margin-left: 5px;
+}
+
+input:focus {
+  outline: none;
+}
+
+#search-icon {
+  font-size: 1.5rem;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 600px) and (max-width: 768px) {
+  .input-wrapper {
+    max-width: 550px;
+    height: 2rem;
   }
-  
-  input:focus {
-    outline: none;
+  input {
+    font-size: 1rem;
   }
-  
-#search-icon{
-    font-size: 1.5rem;
-    color: var(--accent-color);
+  #search-icon {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .input-wrapper {
+    max-width: 400px;
+    height: 1.8rem;
+  }
+  input {
+    font-size: 0.9rem;
+  }
+  #search-icon {
+    font-size: 1.2rem;
+  }
 }
