--- a/src/routes/Cryptocurrencies/Cryptocurrencies.css
+++ b/src/routes/Cryptocurrencies/Cryptocurrencies.css
@@ -2,11 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 1rem;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
 }
-
-
-
 
 .coin-table {
     max-width: 1200px;
