--- a/src/routes/Aboutus/Aboutus.css
+++ b/src/routes/Aboutus/Aboutus.css
@@ -7,7 +7,7 @@
     --gradient: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
   } */
   
-  body {
+  /* body {
     background-color: var(--bg-color);
     color: var(--text-color);
     font-family: 'Poppins', sans-serif;
@@ -15,7 +15,7 @@
     margin: 0;
     padding: 0;
   }
-  
+   */
   .about-us-container {
     max-width: 1200px;
     margin: 50px auto;
