--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: clamp(2rem, 5vw, 4rem);
+
     background: linear-gradient(135deg, 
     #071133 0%, 
     #122651 50%, 
@@ -44,6 +45,7 @@
         justify-content: flex-start;
         padding: 0 1rem;
         box-sizing: border-box;
+        font-size: 2rem;
         
         .faq-item {
             border-bottom: 1px solid var(--sub-text-color);
@@ -56,14 +58,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-    align-items: center;
+
     cursor: pointer;
 
     h3 {
         text-align: left; 
         flex-grow: 1;
-        font-size: clamp(1rem, 4vw, 1.2rem);
-        margin: 0;
+        font-size: clamp(1.1rem, 5.5vw, 1.4rem);
+        margin-bottom: 1rem;
         padding-right: 1rem;
     }
 
