--- a/src/routes/Detail/Detail.module.css
+++ b/src/routes/Detail/Detail.module.css
@@ -1,54 +1,101 @@
+.detailPage {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  color: white;
+}
+
+.backButtonWrapper {
+  margin-bottom: 20px;
+}
+
+.backButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  filter: invert(100%);
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+
+  img {
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.detailImageWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+  margin: 2rem;
+}
+
+.logo {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  margin-right: 1rem;
+}
+
 .detailContainer {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chartSection {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.infoSection {
+  width: 100%;
+  text-align: center;
+}
+
+.infoTitle {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.6;
+  margin-bottom: 10px;
+}
+
+.addToWatchlistBtn {
+  background-color: var(--accent-color);
+  color: white;
+  border: none;
+  font-size: 1.1rem;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.addToWatchlistBtn:hover {
+  background-color: #f75c02;
+}
+
+@media (max-width: 820px) {
+  .detailContainer {
     flex-direction: column;
     align-items: center;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    color:white;
+  }
+
+  .chartSection,
+  .infoSection {
+    width: 100%;
+  }
+
+  .infoSection {
     text-align: center;
   }
-  
-  .infoSection {
-    border-radius: 8px;
-    padding: 20px;
-    margin-bottom: 15px;
-    width: 100%;
-     
-  }
-
-  .infoTitle {
-    font-weight: bold;
-    font-size: 1.5rem;
-  }
-
-  p {
-    font-size: 1.2rem;
-    line-height: 1.6;
-
-  }
-  
-  .addToWatchlistBtn {
-    background-color: var(--accent-color);
-    color: white;
-    border: none;
-    font-size:1.3rem;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-weight: bold;
-  }
-  
-  .addToWatchlistBtn:hover {
-    background-color: #f75c02;
-
-  }
-
-  .detailImageWrapper{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 2rem;
-  }
+}
